SCRUM-34 SCRUM-35 SCRUM-36: cap nhat crud phuong tien